# Road-Running-v1

./: .dockerignore  .gitignore  ARCHITECTURE-DISCUSSION.md  CLAUDE.md  Dockerfile  HANDOFF.md  IMAGE-AND-REG-LINK-FIX.md  INVESTIGATION-AND-PLAN.md  SETUP_LOG.md  firestore.indexes.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
scripts/: setup_wif.sh  test_push.py
src/: main.py  utils.py
src/bot/: cards.py  handlers.py  webapp_api.py
src/db/: firestore_client.py
src/notifier/: push.py
src/scraper/: bao_ming.py  city_resolver.py  crawler.py  ctrun.py  dedup.py  irunner.py  joinnow.py  running_biji.py  sportsnet.py
src/static/: index.html
tests/integration/: conftest.py
tests/unit/: conftest.py  test_bao_ming.py  test_cards.py  test_city_resolver.py  test_crawler.py  test_ctrun.py  test_db.py  test_dedup.py  test_handlers.py  test_irunner.py  test_joinnow.py  test_main.py  test_notifier.py  test_scraper.py  test_sportsnet.py  test_utils.py  test_webapp_api.py
